# World_News

./: README.md  env.example  pyproject.toml
configs/: world_news.yaml
docs/: MCP_TOOL_PROMPT.md  PIPELINE.md
scripts/: test_chat.py
src/world_news/: __init__.py  __main__.py  app.py  config_manager.py  config_schemas.py  mcp_server.py  pipeline.py  prompt_library.py  service.py
src/world_news.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/world_news/clients/: __init__.py  gdelt.py  gemini.py
src/world_news/config/: __init__.py  manager.py  schemas.py  settings.py
